deploy/base/arroyo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arroyo-ingress
  namespace: arroyo
  annotations:
    tailscale.com/proxy-class: tailscale-small
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: arroyo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - arroyo
